--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,18 @@ url: "https://bobghosh91.github.io" # the base hostname & protocol for your site
 twitter_username: 
 github_username:  
 
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "posts" # previously `post` in Jekyll 2.2.
+    values:
+      layout: "post"
+      author: "Bob Ghosh"
+      author_image: "https://static.photos/people/200x200/122"
+      featured: false
+      featured_order: 
+
 # Build settings
 plugins:
   - jekyll-feed
