--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -34,6 +34,6 @@
   logo: /assets/images/partners/axis-mf.png
   website: https://www.axismf.com/
 
-- name: Helios Mutual Fund
-  logo: /assets/images/partners/helios-mf.png
+- name: Aditya Birla Sun Life Mutual Fund
+  logo: /assets/images/partners/absl-mf.png
   website: https://www.heliosmf.in/
