--- a/_data/offices.yml
+++ b/_data/offices.yml
@@ -1,7 +1,7 @@
 - location: I2801 Park Infinia, Hadapsar, Pune, India
-  email: earthencapital@gmail.com
+  email: contact@earthencapital.in
   phone: +91-94763 10780
   
 - location: 338/481 Dhekia, Malancha, Kharagpur (W.B.), India
-  email: earthencapital@gmail.com
+  email: contact@earthencapital.in
   phone: +91-91450 35129
