--- a/_data/offices.yml
+++ b/_data/offices.yml
@@ -1,6 +1,6 @@
 - location: I2801 Park Infinia, Hadapsar, Pune, India
   email: contact@earthencapital.in
-  phone: +91-94763 10780
+  phone: 03222 355 171
   
 - location: 338/481 Dhekia, Malancha, Kharagpur (W.B.), India
   email: contact@earthencapital.in
